--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="./rock paper scissors.js"></script>
+    <title>Rock, Paper, Scissors</title>
+    <link rel="stylesheet" href="./rock paper scissors.css">
+    <script src="./new rock paper scissors.js" defer></script>
 </head>
 <body>
-    
+    <div class="container">
+        <h1>Player please make your choice</h1>
+        <button class="choice">Rock</button>
+        <button class="choice">Paper</button>
+        <button class="choice">Scissors</button>
+        <button class="reset">Reset</button>
+    </div>
 </body>
 </html>
